src/test/pass/optargs/optarg_basic.lly
define f(a: *integer=10 => integer) {
    return a
}

if f() != 10:
    print("Failed.\n")
