src/test/fail/basic_syntax/missing_return.lly
#[
SyntaxError: Missing return statement at end of function.
Where: File "missing_return.lly" at line 6
]#

define f( => integer) {  }
